# chaotic-pfc

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_pt-BR.md  RELEASING.md  analysis_summary.json  pyproject.toml  requirements-lock.txt  run_all.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
data/lyapunov/: henon2d_ensemble.csv  henon4d_ensemble.csv
data/sweeps/Bartlett (bandpass)/: variables_lyapunov.npz
data/sweeps/Bartlett (bandstop)/: variables_lyapunov.npz
data/sweeps/Bartlett (highpass)/: variables_lyapunov.npz
data/sweeps/Bartlett (lowpass)/: variables_lyapunov.npz
data/sweeps/Blackman (bandpass)/: variables_lyapunov.npz
data/sweeps/Blackman (bandstop)/: variables_lyapunov.npz
data/sweeps/Blackman (highpass)/: variables_lyapunov.npz
data/sweeps/Blackman (lowpass)/: variables_lyapunov.npz
data/sweeps/Blackman-Harris (bandpass)/: variables_lyapunov.npz
data/sweeps/Blackman-Harris (bandstop)/: variables_lyapunov.npz
data/sweeps/Blackman-Harris (highpass)/: variables_lyapunov.npz
data/sweeps/Blackman-Harris (lowpass)/: variables_lyapunov.npz
data/sweeps/Hamming (bandpass)/: variables_lyapunov.npz
data/sweeps/Hamming (bandstop)/: variables_lyapunov.npz
data/sweeps/Hamming (highpass)/: variables_lyapunov.npz
data/sweeps/Hamming (lowpass)/: variables_lyapunov.npz
data/sweeps/Hann (bandpass)/: variables_lyapunov.npz
data/sweeps/Hann (bandstop)/: variables_lyapunov.npz
data/sweeps/Hann (highpass)/: variables_lyapunov.npz
data/sweeps/Hann (lowpass)/: variables_lyapunov.npz
data/sweeps/Rectangular (bandpass)/: variables_lyapunov.npz
data/sweeps/Rectangular (bandstop)/: variables_lyapunov.npz
data/sweeps/Rectangular (highpass)/: variables_lyapunov.npz
data/sweeps/Rectangular (lowpass)/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_10.00/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_10.50/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_11.00/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_11.50/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_12.00/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_12.50/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_13.00/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_13.50/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_14.00/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_2.00/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_2.50/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_3.00/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_3.50/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_4.00/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_4.50/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_5.00/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_5.50/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_6.00/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_6.50/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_7.00/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_7.50/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_8.00/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_8.50/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_9.00/: variables_lyapunov.npz
data/sweeps/kaiser/bandpass/beta_9.50/: variables_lyapunov.npz
data/sweeps/kaiser/bandstop/beta_10.00/: variables_lyapunov.npz
data/sweeps/kaiser/bandstop/beta_10.50/: variables_lyapunov.npz
data/sweeps/kaiser/bandstop/beta_11.00/: variables_lyapunov.npz
data/sweeps/kaiser/bandstop/beta_11.50/: variables_lyapunov.npz
data/sweeps/kaiser/bandstop/beta_12.00/: variables_lyapunov.npz
data/sweeps/kaiser/bandstop/beta_12.50/: variables_lyapunov.npz
data/sweeps/kaiser/bandstop/beta_13.00/: variables_lyapunov.npz
data/sweeps/kaiser/bandstop/beta_13.50/: variables_lyapunov.npz
docs/: Makefile  _redirect.html  architecture.rst  background.rst  conf.py  contributing.rst  development.rst  index.rst  internals.rst  usage.rst
docs/api/: index.rst
docs/locale/pt_BR/LC_MESSAGES/: architecture.po  background.po  contributing.po  development.po  index.po  internals.po  usage.po
scripts/: 01_henon_attractors.py  02_sensitivity.py  03_comm_ideal_channel.py  04_comm_fir_channel.py  05_comm_order_n.py  06_lyapunov.py  07_henon_sweep_compute.py  08_henon_sweep_plot.py  benchmark.py
src/chaotic_pfc/: __init__.py  __main__.py  _compat.py  _i18n.py  _version.py  analysis.py  channel.py  config.py  dcsk.py  lyapunov.py  maps.py  plotting.py  receiver.py  signals.py  spectral.py  sweep.py  sweep_plotting.py  sweep_plotting_3d.py  transmitter.py
src/chaotic_pfc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/chaotic_pfc/analysis/: __init__.py  stats.py  sweep_plotting.py  sweep_plotting_3d.py
src/chaotic_pfc/analysis/sweep/: __init__.py  _io.py  _kernel.py  _orchestration.py  _types.py
src/chaotic_pfc/cli/: __init__.py  _common.py  analysis.py  attractors.py  comm_fir.py  comm_ideal.py  comm_order_n.py  dcsk.py  lyapunov.py  run_all.py  sensitivity.py  sweep.py
src/chaotic_pfc/cli/sweep/: __init__.py  _beta.py  _compute.py  _plot.py  _plot_3d.py
src/chaotic_pfc/comms/: __init__.py  channel.py  dcsk.py  protocols.py  receiver.py  transmitter.py
src/chaotic_pfc/dynamics/: __init__.py  lyapunov.py  maps.py  signals.py  spectral.py
src/chaotic_pfc/plotting/: __init__.py  figures.py
tests/: _test_helpers.py  test_analysis.py  test_channel.py  test_cli.py  test_cli_smoke.py  test_compat.py  test_compat_equivalence.py  test_dcsk.py  test_i18n.py  test_lyapunov.py  test_maps.py  test_plotting.py  test_protocols.py  test_receiver.py  test_signals.py  test_spectral.py  test_sweep.py  test_sweep_plotting.py  test_transmitter.py
(+68 files in other folders)
