[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaotic-pfc"
version = "0.3.0"
description = "Chaotic communication system based on the Hénon map"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "numba>=0.59",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.0",
    "sphinx-copybutton>=0.5",
    "myst-parser>=3.0",
]
viz3d = [
    "plotly>=5.18",
]

[project.scripts]
chaotic-pfc = "chaotic_pfc.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# ───────────────────────────────────────────────────────────────────────────
# Coverage — measurement config for pytest-cov
# ───────────────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["chaotic_pfc"]
branch = true
omit = [
    "*/__main__.py",
    "*/plotting.py",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false

# ───────────────────────────────────────────────────────────────────────────
# Ruff — linter + formatter
# ───────────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["data", "figures", ".venv"]

[tool.ruff.lint]
# Curated set of rule families. Every family is tagged with its origin.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear (likely bugs)
    "UP",  # pyupgrade (modernise syntax)
    "SIM", # flake8-simplify (readability)
    "RUF", # Ruff-specific rules
]
ignore = [
    "E741",  # ambiguous variable name — common in math code (l, I, O)
    "E501",  # line too long — the formatter handles this where it can
    # Unicode characters used intentionally in mathematical docstrings
    # (α, β, λ, em-dashes, minus signs, subscripts, etc.).
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# Tests can use longer lines, unused imports (fixtures), and magic constants
"tests/**" = ["E501", "F401", "B011"]

[tool.ruff.lint.isort]
known-first-party = ["chaotic_pfc"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ───────────────────────────────────────────────────────────────────────────
# mypy — static type checking
# ───────────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
files = ["src/chaotic_pfc"]
ignore_missing_imports = true  # numba, scipy, etc. ship partial stubs
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true

# Scientific libs have inconsistent stubs — don't let their noise drown signal
[[tool.mypy.overrides]]
module = ["numba.*", "scipy.*", "matplotlib.*"]
ignore_errors = true
